# r2-d2

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: FUTURE_DEVELOPMENT.md
research/competitive/: premier_aurra-sing-law_pq-lawless-time-19th.md  premier_beckett_pq-lawless-time-8th.md  premier_boba-fett-jtl_pq-lawless-time-5th.md  premier_chewbacca-law_pq-lawless-time-3rd.md  premier_lando-full-sabacc_pq-lawless-time-4th.md  premier_luke-jtl_pq-lawless-time-18th.md  premier_mother-talzin_pq-lawless-time-11th.md  premier_obi-wan-lof_pq-lawless-time-2nd.md  premier_thrawn-lof_pq-lawless-time-15th.md  premier_yularen_pq-lawless-time-1st.md
scripts/: build_catalog.py  enrich_collection.py  start_stdio.py
src/swu_mcp/: card_service.py  catalog.py  collection_service.py  combo_packages.py  config.py  deck_service.py  game_service.py  interaction_glossary.py  models.py  server.py  types.py
