[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r2-d2"
version = "0.3.0"
description = "Star Wars Unlimited MCP server — card search, deck building, format validation, meta analysis, and two-player game simulation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.2.3,<4",
  "httpx>=0.28.1",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
r2-d2 = "swu_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swu_mcp"]

[tool.hatch.build.targets.wheel.sources]
src = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
